--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "clean": "rm -rf dist coverage cdk.out",
     "lint": "eslint . --ext .ts",
     "format": "prettier --write .",
-    "test": "jest --runInBand",
+    "test": "npm run test:backend && npm run test:frontend",
+    "test:backend": "jest --runInBand",
+    "test:frontend": "npm --prefix frontend run test",
     "cdk:synth": "npm run build && cdk synth -a \"node dist/infrastructure/cdk/bin/app.js\"",
     "cdk:deploy": "npm run build && cdk deploy -a \"node dist/infrastructure/cdk/bin/app.js\""
   },
