--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,6 @@
-NEXT_PUBLIC_API_BASE_URL=https://77tlaqnrph.execute-api.us-east-1.amazonaws.com/prod
-NEXT_PUBLIC_COGNITO_USER_POOL_ID=us-east-1_BNFzLty28
-NEXT_PUBLIC_COGNITO_CLIENT_ID=51da0f2j0kk4bkd2i0pv2den8s
-NEXT_PUBLIC_COGNITO_DOMAIN=
-NEXT_PUBLIC_COGNITO_REDIRECT_URI=
+NEXT_PUBLIC_API_BASE_URL=https://example.execute-api.us-east-1.amazonaws.com/prod/
+NEXT_PUBLIC_COGNITO_USER_POOL_ID=us-east-1_example
+NEXT_PUBLIC_COGNITO_CLIENT_ID=exampleclientid
+# Optional: only if using Cognito Hosted UI
+NEXT_PUBLIC_COGNITO_DOMAIN=yourdomain.auth.us-east-1.amazoncognito.com
+NEXT_PUBLIC_COGNITO_REDIRECT_URI=https://your-amplify-domain/
