--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.863.0",
+    "@aws-sdk/client-ssm": "^3.863.0",
     "@aws-sdk/lib-dynamodb": "^3.863.0",
     "aws-cdk-lib": "^2.209.1",
     "constructs": "^10.4.2",
-    "uuid": "^11.1.0",
-    "@aws-sdk/client-ssm": "^3.863.0"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.147",
@@ -38,7 +38,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
     "jest": "^30.0.5",
-    "prettier": "^3.6.2",
+    "prettier": "^3.8.1",
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
