--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,31 +10,6 @@ permissions:
   contents: read
 
 jobs:
-  backend:
-    name: Backend - Lint, Test, Build
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-
-      - name: Install
-        run: npm ci
-
-      - name: Lint
-        run: npm run lint
-
-      - name: Test
-        run: npm run test:backend
-
-      - name: Build
-        run: npm run build
-
   frontend:
     name: Frontend - Lint, Test, Build
     runs-on: ubuntu-latest
@@ -59,7 +34,33 @@ jobs:
         run: npm run lint
 
       - name: Test
-        run: npm test
+        run: npm test --if-present
 
       - name: Build
         run: npm run build
+
+  cdk:
+    name: CDK - Build, Synth
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: infrastructure/cdk
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: infrastructure/cdk/package-lock.json
+
+      - name: Install
+        run: npm ci
+
+      - name: Build
+        run: npm run build
+
+      - name: Synth
+        run: npx cdk synth --ci
