--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,20 @@ permissions:
   contents: read
 
 jobs:
+  cdk:
+    name: CDK - Synth
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+          cache-dependency-path: package-lock.json
+      - run: npm ci
+      - run: rm -rf dist/infrastructure/cdk || true
+      - run: npx cdk synth --ci --app "npx ts-node --prefer-ts-exts infrastructure/cdk/bin/app.ts"
+
   backend:
     name: Backend - Lint, Test, Build
     runs-on: ubuntu-latest
