--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,13 @@
 name: Deploy CDK
 
 on:
-  push:
+  workflow_run:
+    workflows:
+      - CI
     branches:
       - main
+    types:
+      - completed
 
 permissions:
   id-token: write
@@ -11,14 +15,19 @@ permissions:
 
 jobs:
   deploy:
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha }}
 
       - uses: actions/setup-node@v4
         with:
-          node-version: 22
+          node-version: 20
+          cache: npm
+          cache-dependency-path: package-lock.json
 
       - run: npm ci
 
@@ -28,5 +37,9 @@ jobs:
           role-to-assume: arn:aws:iam::864981757594:role/roll-model-github-actions
           aws-region: us-east-1
 
+      # Optional but often helpful if your build creates dist/ copies of CDK code
+      - run: rm -rf dist/infrastructure/cdk || true
+
       - run: npm run build
-      - run: npx cdk deploy --require-approval never
+
+      - run: npx cdk deploy --require-approval never --ci --app "npx ts-node --prefer-ts-exts infrastructure/cdk/bin/app.ts"
