--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,13 +41,13 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npm run lint --if-present
+        run: npm run lint
 
       - name: Test
-        run: npm run test --if-present
+        run: npm run test:backend
 
       - name: Build
-        run: npm run build --if-present
+        run: npm run build
 
   frontend:
     name: Frontend - Lint, Test, Build
@@ -70,36 +70,10 @@ jobs:
         run: npm ci
 
       - name: Lint
-        run: npm run lint --if-present
+        run: npm run lint
 
       - name: Test
-        run: npm test --if-present
+        run: npm test
 
       - name: Build
         run: npm run build
-
-  cdk:
-    name: CDK - Build, Synth
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: infrastructure/cdk
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
-          cache-dependency-path: infrastructure/cdk/package-lock.json
-
-      - name: Install
-        run: npm ci
-
-      - name: Build
-        run: npm run build --if-present
-
-      - name: Synth
-        run: npx cdk synth --ci
