added feedback and sign up buttons

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.863.0",
+    "@aws-sdk/client-ses": "^3.863.0",
     "@aws-sdk/client-ssm": "^3.863.0",
     "@aws-sdk/lib-dynamodb": "^3.863.0",
     "aws-cdk-lib": "^2.209.1",
