Added Cognito  functionality

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,4 +3,10 @@ NEXT_PUBLIC_COGNITO_USER_POOL_ID=us-east-1_example
 NEXT_PUBLIC_COGNITO_CLIENT_ID=exampleclientid
 # Optional: only if using Cognito Hosted UI
 NEXT_PUBLIC_COGNITO_DOMAIN=yourdomain.auth.us-east-1.amazoncognito.com
-NEXT_PUBLIC_COGNITO_REDIRECT_URI=https://your-amplify-domain/
+# Sign-in callbacks must point to /auth/callback and match the running origin.
+# You can provide one URI per environment, or a comma-separated list (local + preview + prod).
+NEXT_PUBLIC_COGNITO_SIGN_IN_REDIRECT_URIS=http://localhost:3000/auth/callback,https://preview-branch.example.amplifyapp.com/auth/callback,https://app.example.com/auth/callback
+# Sign-out redirects should usually return to the app root for each environment.
+NEXT_PUBLIC_COGNITO_SIGN_OUT_REDIRECT_URIS=http://localhost:3000/,https://preview-branch.example.amplifyapp.com/,https://app.example.com/
+# Legacy fallback (sign-in only). Prefer NEXT_PUBLIC_COGNITO_SIGN_IN_REDIRECT_URIS.
+# NEXT_PUBLIC_COGNITO_REDIRECT_URI=http://localhost:3000/auth/callback
