fixed AuthContext tests

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "format": "prettier --write .",
     "test": "npm run test:backend && npm run test:frontend",
     "test:backend": "jest --runInBand",
-    "test:frontend": "npm --prefix frontend run test",
+    "test:frontend": "bash scripts/test-frontend.sh",
     "cdk:synth": "npm run build && cdk synth -a \"node dist/infrastructure/cdk/bin/app.js\"",
     "cdk:deploy": "npm run build && cdk deploy -a \"node dist/infrastructure/cdk/bin/app.js\"",
     "setup:codex": "bash scripts/codex/setup-environment.sh"
