--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "npm run test:backend && npm run test:frontend",
     "test:backend": "jest --runInBand",
     "test:frontend": "bash scripts/test-frontend.sh",
+    "amplify:debug": "bash scripts/amplify-release-debug.sh",
     "cdk:synth": "npm run build && cdk synth -a \"node dist/infrastructure/cdk/bin/app.js\"",
     "cdk:deploy": "npm run build && cdk deploy -a \"node dist/infrastructure/cdk/bin/app.js\"",
     "setup:codex": "bash scripts/codex/setup-environment.sh"
