--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "build": "tsc -p tsconfig.json",
     "clean": "rm -rf dist coverage cdk.out",
     "lint": "eslint backend infrastructure --ext .ts",
+    "lint:frontend": "npm --prefix frontend run lint",
+    "lint:all": "npm run lint && npm run lint:frontend",
     "format": "prettier --write .",
-    "test": "npm run test:backend && npm run test:frontend",
+    "test": "npm run lint:all && npm run test:backend && npm run test:frontend",
     "test:backend": "jest --runInBand",
     "test:frontend": "bash scripts/test-frontend.sh",
     "amplify:debug": "bash scripts/amplify-release-debug.sh",
