augmented github issue creation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -3,3 +3,16 @@ CDK_DEFAULT_ACCOUNT=123456789012
 CDK_DEFAULT_REGION=us-east-1
 # If your Lambda reads OpenAI key from SSM
 OPENAI_SSM_PARAM_NAME=/roll-model/openai_api_key
+GITHUB_REPO=owner/repo
+GITHUB_TOKEN_SSM_PARAM=/roll-model/github_token
+APP_ENV=prod
+APP_VERSION=dev
+FEEDBACK_ACTOR_HASH_SALT=change-me
+FEEDBACK_REVIEW_REQUIRED_ENVS=
+FEEDBACK_NORMALIZE_MODE=auto
+FEEDBACK_OPENAI_MODEL=gpt-4.1-mini
+FEEDBACK_RATE_LIMIT_PER_HOUR=6
+FEEDBACK_RATE_LIMIT_PER_DAY=20
+FEEDBACK_COOLDOWN_SECONDS=20
+FEEDBACK_DUPLICATE_WINDOW_HOURS=24
+FEEDBACK_DUPLICATE_LIMIT=2
